Fixed coded by link not centered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,10 @@
     margin: 1.25rem auto 0;
 }
 
+.qrcode__text:nth-of-type(2) {
+    margin: 0 auto;
+}
+
 .qrcode__text__title {
     color: var(--dark-blue);
     font-size: 1.375rem;
